Fix ios layout issue

--- a/css/common.css
+++ b/css/common.css
@@ -126,11 +126,11 @@ nav .menu li {float:left; padding:10px 20px;}
 nav .menu li a {display:block; line-height:1.6em; font-size:18px;}
 
 @media (max-width:1024px) {
-	nav {position:fixed; top:0; left:0; z-index:1; width:100%; height:100%; background:#000; transition:all .3s cubic-bezier(.75, 0, 1, .25); transform:translateY(-100%);}
+	nav {position:fixed; top:0; left:0; z-index:1; width:100%; height:100vh; background:#000; transition:all .3s cubic-bezier(.75, 0, 1, .25); transform:translateY(-100%);}
 	header.on nav {transform:translateY(0); color:#fff;}
 	nav .nav_wrap {height:100%;}
-	nav .menu {padding-top:135px;}
-	nav .menu li {float:none; padding:12px 0;}
+	nav .menu {padding-top:120px;}
+	nav .menu li {float:none; padding:10px 0;}
 	nav .menu li a {display:inline-block; line-height:1em; font-size:40px; font-weight:600; color:#fff; transition:all .3s; transform:translateX(-100%); opacity:0;}
 	header.on nav .menu li a {opacity:1; transform:translateX(0);}
 	header.on nav .menu li:nth-child(1) a {transition-delay:.4s;}
@@ -169,7 +169,7 @@ nav .menu li a {display:block; line-height:1.6em; font-size:18px;}
 @media (max-width:1024px) {
 	.portfolio {margin:-12px; margin-top:50px;}
 	.portfolio li {padding:12px;}
-	.portfolio li .overlay {background:none; opacity:1;}
+	.portfolio li .overlay {display:block; background:none; opacity:1;}
 	.portfolio li .txt_wrap {display:block; position:absolute; bottom:24px; left:0; width:100%; padding:0 24px; color:#00e; text-align:left;}
 	.portfolio li .txt_wrap .tit {font-size:20px;}
 	.portfolio li .txt_wrap small {margin-top:5px; font-size:13px; text-transform:capitalize;}
